Minor release 3.0.7 (from dev @ 556660b2f)